CP Issue Creation with Netting Added. Get Transaction History and Document History for CP Issue Added. Fetch CP Issue All commands Tested
