# IndiaCP_SwaggerSpecificaiton/src/main/java/com/barclays/indiacp/model/CPIssueError.java
@@ -8,18 +8,6 @@
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
  */
 
 
@@ -36,6 +24,8 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 public enum CPIssueError {
   
   CREATION_ERROR("CP_CREATION_ERROR"),
+  
+  PROGRAM_CEILING_EXCEEDED_ERROR("CP_PROGRAM_CEILING_EXCEEDED_ERROR"),
   
   FETCH_ERROR("CP_FETCH_ERROR"),
   
